# OpenVINO-Llama

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  dev.sh  docs.md  plan.md  readme.md  test_gpt2_openvino.py  test_gpt2_tflite.py
.claude/: PLAN.md  STRUCTURE.md  WASI_PLAN.md
backend/: Cargo.toml  Makefile  README.md  test_minimal.rs  test_native_model.rs  test_text_inference.sh  test_text_model.sh
backend/inferencer/: Cargo.toml
backend/inferencer/src/: imagenet_labels.rs  lib.rs  main.rs  preprocessing.rs  registry.rs  text_preprocessing.rs
backend/server/: Cargo.toml  rustfmt.toml  test_gpt2_rust.wasm  test_with_server.sh
backend/server/fixture/: model.xml
backend/server/fixture/text_model/: openvino_model.xml  tokenizer.json
backend/server/src/: config.rs  lib.rs  main.rs  model_config.rs  runtime.rs  tensor.rs  utils.rs
backend/server/tests/: integration_test.rs
backend/test/: index.js  test.sh
docs/: BERT Question Answering Demo.md  HuggingFace-Rust  OpenVINO Hugging Face pipeline optimization.md  OpenVINO Text Model Implementation in Rust.md  OpenVINO preprocessing.md
frontend/: app.js  index.html  styles.css
gpt2_rust/: Cargo.toml
gpt2_rust/src/: lib.rs  test_minimal.rs
old_frontend/: app.js  index.html  styles.css
ov_ir/: gpt2_converted.xml  gpt2_converted_fixed.xml  openvino_model.xml  ov.xml  ov_ir.py  qwen3.py  shape.py  tflite.ipynb  utils.py
ov_ir/model/: .mv  README.md  generation_config.json  tokenizer_config.json
ov_ir/model_path/: .msc  (+3 more)
test_gpt2_rust/: Cargo.toml
webapp/: app.js  index.html  styles.css
(+5 files in other folders)
