[package]
name = "inferencer"
version = "0.0.0"
authors = ["Saam Tehrani"]
edition = "2021"

[dependencies]
wasi-nn = "0.1.0"
log = "0.4"
wasm-logger = "0.2"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
tokenizers = { version = "0.19", default-features = false, features = ["unstable_wasm"] }